force-app/main/default/objects/WorkType/fields/Gantt_Icon__c.field-meta.xml
<CustomField>
    <fullName>Gantt_Icon__c</fullName>
    <label>Gantt Icon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RedCircle</fullName>
                <label>Red Circle</label>
            </value>
            <value>
                <fullName>ResourceWithNotepad</fullName>
                <label>Resource With Notepad</label>
            </value>
            <value>
                <fullName>LightBulb</fullName>
                <label>Light Bulb</label>
            </value>
            <value>
                <fullName>BlackCircle</fullName>
                <label>Black Circle</label>
            </value>
            <value>
                <fullName>Wrench</fullName>
            </value>
            <value>
                <fullName>AquaCircle</fullName>
                <label>Aqua Circle</label>
            </value>
            <value>
                <fullName>PaperWithPen</fullName>
                <label>Paper With Pen</label>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>LeakTest</fullName>
                <label>Leak Test</label>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>