force-app/main/default/objects/WorkType/fields/Maintenance_Work__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance Work</label>
    <type>Checkbox</type>
</CustomField>