force-app/main/default/objects/WorkType/fields/SkipCapacityCalc__c.field-meta.xml
<CustomField>
    <fullName>SkipCapacityCalc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Capacity Calculation</label>
    <type>Checkbox</type>
</CustomField>