force-app/main/default/objects/WorkType/fields/Work_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Category__c</fullName>
    <label>Work Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Type_Category</valueSetName>
    </valueSet>
</CustomField>