force-app/main/default/objects/WorkType/listViews/All_WorkTypes.listView-meta.xml
<ListView>
    <fullName>All_WorkTypes</fullName>
    <columns>Name</columns>
    <columns>Work_Type_Category__c</columns>
    <columns>Description</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <columns>Priority__c</columns>
    <columns>Maintenance_Work__c</columns>
    <columns>Gantt_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Types</label>
</ListView>